[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde"] }
